--- a/auth.html
+++ b/auth.html
@@ -10,14 +10,14 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
-        <div class="d-flex justify-content-center align-items-center "style="height: 100vh;">
-            <div class="card cl-xl-4 w-50  ">
+        <div class="d-flex justify-content-center align-items-center col-md-12"style="height: 100vh;">
+            <div class="card cl-xl-4 col-sm-12 col-md-12 col-lg-12  w-50  ">
                 <div class="card-header">
-                    <p class="text-center">autorization</p>
+                    <p class="text-center">Autorization</p>
                 </div>
                 <div class="card-body">
                     <p class="h6 error"></p>
-                    <input type="text" class="form-control p-3 mt-2 mb-2 email" placeholder="Email...">
+                    <input type="text" class="form-control p-3 mt-2 ml-2 email" placeholder="Email...">
                     <input type="password" class="form-control p-3 mt-2 mb-2 password" placeholder="Password...">
                 </div>
                 <div class="card-footer w-100 d-flex justify-content-center align-items-center ">
