change side bar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <input type="URL" placeholder="URL for background" class="form-control  mb-2 chooseURL">
                 <button class="btn btn-outline-primary w-100 bg-success addBackground">add</button>
                 <button class="btn btn-outline-primary w-100 bg-danger  addHero">admin</button>
+                <button class="btn btn-outline-primary w-100 p-2 back">Back</button>
             </div>
             <button type="button" class="menu_btn"> 
                 <img src="https://cdn.pixabay.com/photo/2013/07/12/18/46/throwing-star-153835__480.png" alt="aroow_btn"> 
