--- a/admin.html
+++ b/admin.html
@@ -1,28 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Document</title> 
     <link rel="stylesheet" href="css/style.css">
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> 
+    <style> 
+        body{ 
+            background: url('https://wallpaperscave.ru/images/original/18/07-26/anime-naruto-70482.jpg') center / cover; 
+        } 
+    </style> 
+</head> 
 <body>
-    <div class="container d-flex justify-content-center align-items-center admin " >
-        <div class="card col-xl-5 border p-4 mt-5 ">
-              <input type="text" id="name" placeholder="Name..." class="mb-2 form-control p-2 "  >
-              <input type="text" id="clan" placeholder="Clan..."class="mb-2 form-control p-2 clan" >
-              <input type="text" id="village" placeholder="Village..."class="mb-2 form-control p-2 " >
-              <input type="text" id="element" placeholder="Element..."class="mb-2 form-control p-2 " >
-              <input type="text" id="level" placeholder="Level.."class="mb-2 form-control p-2 " >
-              <input type="text" id="power" placeholder="Power..."class="mb-2 form-control p-2 " >
-              <input type="URL" id="url" placeholder="URL..."class="mb-2 form-control p-2  " >
-              <button class="btn btn-outline-primary p-2 submitBtn">Submit</button>
-              <button class="btn btn-outline-primary p-2 back">Back</button>
-        </div>
-    </div>
-
-    <script src="js/admin.js"></script>
-</body>
+    <a class="btn btn-danger m-3" href="index.html">Return</a> 
+ 
+    <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;"> 
+        <div class="col-xl-6 card p-5  btn btn-outline-dark"> 
+            <input type="text" class="form-control btn btn-outline-warning p-2 mt-2 mb-2 " id="name" placeholder="Name"> 
+            <input type="text" class="form-control btn btn-outline-warning p-2 mt-2 mb-2" id="clan" placeholder="Clan"> 
+            <input type="text" class="form-control btn btn-outline-warning p-2 mt-2 mb-2" id="village" placeholder="Village"> 
+            <input type="text" class="form-control btn btn-outline-warning p-2 mt-2 mb-2" id="power" placeholder="Power"> 
+            <input type="text" class="form-control btn btn-outline-warning p-2 mt-2 mb-2" id="level" placeholder="Level"> 
+            <input type="text" class="form-control btn btn-outline-warning p-2 mt-2 mb-2" id="element" placeholder="Element"> 
+            <input type="text" class="form-control btn btn-outline-warning p-2 mt-2 mb-2" id="image" placeholder="Image"> 
+            <button class="btn btn-outline-primary w-100 mt-3 submitBtn">Submit</button> 
+        </div> 
+    </div> 
+    <script src="js/admin.js"></script> 
+</body> 
 </html>
